syntax = "proto3";

option go_package = "impl/services";
//protoc register_service.proto  --go_out=plugins=grpc:.

//https://blog.csdn.net/weixin_33697898/article/details/85980797?utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-3.vipsorttest&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-3.vipsorttest

package greet;
service RegisterService {
  // Sends a greeting
  rpc Register (ServiceRequest) returns (ServiceReply);
  rpc Callback (EmptyRequest) returns (ServiceReply);
   rpc Get (NameRequest) returns (ServiceApiReply);

}
message EmptyRequest {
	
}
message NameRequest {
	string name=1;
}
message ServiceRequest {
  string ip=1;
  int32 port=2;
  string name=3;
}
message ServiceApiReply {
  string ip=1;
  int32 port=2;
  string name=3;
  int32 status=4;
}

message ServiceReply{
  int32 status=1;
  string msg=2;
}